Fix past events text overflowing

--- a/app/Resources/public/less/index.less
+++ b/app/Resources/public/less/index.less
@@ -138,19 +138,18 @@
     background-color: #1D3F58;
 
     &::before {
+        position: absolute;
         font-family: "FA-Icons-Home";
         font-size: 4.2rem;
         content: "";
-        margin-left: 40px;
+        margin-left: 30px;
         text-decoration: none;
         display: inline;
         line-height: 125px;
-        vertical-align: middle;
     }
 
     h2 {
-        display: inline;
-        padding: 20px;
+        padding: 20px 20px 20px 125px;
     }
 }
 
